--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -14,7 +14,7 @@
           </p>
           <div class="testimonials-avatar">
               <img
-                src=".../img/testimonials-1.jpg"
+                src="../img/testimonials/testimonials-1.jpg"
                 alt="Donna Norman"
                 class="testimonials-list-item-image"
                 width="56"
@@ -33,7 +33,7 @@
           </p>
           <div class="testimonials-avatar">
               <img
-                src=".../img/testimonials-2.jpg"
+                src="../img/testimonials/testimonials-2.jpg"
                 alt="Sophie Delgado"
                 class="testimonials-list-item-image"
                 width="56"
@@ -52,7 +52,7 @@
           </p>
           <div class="testimonials-avatar">
               <img
-                src=".../img/testimonials-3.jpg"
+                src="../img/testimonials/testimonials-3.jpg"
                 alt="Rachel Kimura"
                 class="testimonials-list-item-image"
                 width="56"
@@ -71,7 +71,7 @@
           </p>
           <div class="testimonials-avatar">
               <img
-                src=".../img/testimonials-4.jpg"
+                src="../img/testimonials/testimonials-4.jpg"
                 alt="Emma L. Hart"
                 class="testimonials-list-item-image"
                 width="56"
