--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,31 +1,33 @@
 <footer class="footer container">
   <div class="footer-wrapper">
-    <a href="/index.html" class="footer-logo"
-      ><svg width="84px" height="36px" class="footer-logo-icon">
-        <use href="/images/icons.svg#logo">href</use>
-      </svg></a
-    >
-    <p class="footer-subscribe-form-text">
-      Subscribe to our newsletter for the latest updates on our yoga courses and
-      events.
-    </p>
-    <form action="" class="footer-subscribe-form">
-      <input
-        type="email"
-        name="footer-user-email"
-        id="footer-user-email"
-        placeholder="Placeholder"
-        pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
-        required
-      />
-      <!-- <p class="text-valid">Succes!</p>
-        <p class="text-invalid">Invalid email, try again</p> -->
-      <button type="submit" class="footer-subscribe-form-btn">Join</button>
-    </form>
-    <p class="footer-privacy">
-      By subscribing, you consent to our Privacy Policy and agree to receive
-      updates.
-    </p>
+    <div class="first-block">
+      <a href="/index.html" class="footer-logo"
+        ><svg width="84px" height="36px" class="footer-logo-icon">
+          <use href="/img/icons.svg#icon-logo">href</use>
+        </svg></a
+      >
+      <p class="footer-subscribe-form-text">
+        Subscribe to our newsletter for the latest updates on our yoga courses
+        and events.
+      </p>
+      <form action="" class="footer-subscribe-form">
+        <input
+          type="email"
+          name="footer-user-email"
+          id="footer-user-email"
+          placeholder="Placeholder"
+          pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
+          required
+        />
+        <!-- <p class="text-valid">Succes!</p>
+          <p class="text-invalid">Invalid email, try again</p> -->
+        <button type="submit" class="footer-subscribe-form-btn">Join</button>
+      </form>
+      <p class="footer-privacy">
+        By subscribing, you consent to our Privacy Policy and agree to receive
+        updates.
+      </p>
+    </div>
     <h3 class="footer-nav-header">Quick Links</h3>
     <ul class="footer-nav">
       <li class="footer-nav-item"><a href="#yoga-classes"></a>Yoga Classes</li>
@@ -36,26 +38,26 @@
     <h3 class="footer-socials-header">Connect With Us</h3>
     <ul class="footer-socials">
       <li class="footer-socials-item">
-        <svg class="footer-socials-item-icon">
-          <use href="/img/icons.svg#"></use>
+        <svg width="24" height="24" class="footer-socials-item-icon">
+          <use href="/img/icons.svg#icon-Facebook"></use>
         </svg>
         <p class="footer-socials-item-text">Facebook</p>
       </li>
       <li class="footer-socials-item">
-        <svg class="footer-socials-item-icon">
-          <use href="/img/icons.svg#"></use>
+        <svg width="24" height="24" class="footer-socials-item-icon">
+          <use href="/img/icons.svg#icon-Instagram"></use>
         </svg>
         <p class="footer-socials-item-text">Instagram</p>
       </li>
       <li class="footer-socials-item">
-        <svg class="footer-socials-item-icon">
-          <use href="/img/icons.svg#"></use>
+        <svg width="24" height="24" class="footer-socials-item-icon">
+          <use href="/img/icons.svg#icon-LinkedIn"></use>
         </svg>
         <p class="footer-socials-item-text">LinkedIn</p>
       </li>
       <li class="footer-socials-item">
-        <svg class="footer-socials-item-icon">
-          <use href="/img/icons.svg#"></use>
+        <svg width="24" height="24" class="footer-socials-item-icon">
+          <use href="/img/icons.svg#icon-Youtube"></use>
         </svg>
         <p class="footer-socials-item-text">YouTube</p>
       </li>
