--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,21 +1,26 @@
 <section class="hero">
-    <picture class="hero-img">
-        <source media="(max-width:767px)" srcset="../img/hero-img/hero-img-mob-min.jpg 1x,
-        ../img/hero-img/hero-img-mob@2-min.jpg 2x" />
+
+    <picture>
+        <source media="(min-width:1336px)" srcset="../img/hero-img/hero-img-desk-min.jpg 1x,
+        ../img/hero-img/hero-img-desk@2x-min.jpg 2x">
 
         <source media="(min-width:768px)" srcset="../img/hero-img/hero-img-tab-min.jpg 1x,
-        ../img/hero-img/hero-img-tab@2-min.jpg 2x" />
+        ../img/hero-img/hero-img-tab@2x-min.jpg 2x">
 
-        <source media="(min-width:1336px)" srcset="../img/hero-img/hero-img-desk-min.jpg 1x,
-        ../img/hero-img/hero-img-desk@2-min.jpg 2x" />
+        <source media="(max-width:767px)" srcset="../img/hero-img/hero-img-mob-min.jpg 1x,
+        ../img/hero-img/hero-img-mob@2x-min.jpg 2x">
 
-        <img src="../img/hero-img/hero-img-desk-min.jpg" alt="hero-banner">
+        <img src="../img/hero-img/hero-img-desk-min.jpg" class="hero-img" alt="hero-banner">
     </picture>
+
     <div class="hero-container container">
         <h1 class="hero-title">Transform Your Life with Our Yoga Clases</h1>
         <p class="hero-paragraph">Discover the harmony of mind and body through our expertly designed yoga programs.
             Join a community dedicated to wellness and personal growth.</p>
-        <a href="#pricing" class="anchor-link">Join Now</a>
-        <a href="#gallery" class="anchor-link">Learn More</a>
+        <ul class="hero-list">
+            <li><a href="#pricing" class="anchor anchor-link">Join Now</a></li>
+            <li><a href="#gallery" class="anchor anchor-link-secondary">Learn More</a></li>
+        </ul>
+
     </div>
 </section>
