--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -1,6 +1,6 @@
 <body>
   <main>
-    <section class="team">
+    <section class="team" id="team">
       <div class="container">
         <h3 class="team-text-top">Meet</h3>
         <h2 class="team-title">Our Team</h2>
