--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,6 +12,7 @@
       </p>
       <form action="" class="footer-subscribe-form">
         <input
+          class="footer-subscribe-form-input"
           type="email"
           name="footer-user-email"
           id="footer-user-email"
@@ -28,40 +29,78 @@
         updates.
       </p>
     </div>
-    <h3 class="footer-nav-header">Quick Links</h3>
-    <ul class="footer-nav">
-      <li class="footer-nav-item"><a href="#yoga-classes"></a>Yoga Classes</li>
-      <li class="footer-nav-item"><a href="#team"></a>Team</li>
-      <li class="footer-nav-item"><a href="#pricing"></a>Pricing</li>
-      <li class="footer-nav-item"><a href="#contacts"></a>Contacts</li>
-    </ul>
-    <h3 class="footer-socials-header">Connect With Us</h3>
-    <ul class="footer-socials">
-      <li class="footer-socials-item">
-        <svg width="24" height="24" class="footer-socials-item-icon">
-          <use href="/img/icons.svg#icon-Facebook"></use>
-        </svg>
-        <p class="footer-socials-item-text">Facebook</p>
-      </li>
-      <li class="footer-socials-item">
-        <svg width="24" height="24" class="footer-socials-item-icon">
-          <use href="/img/icons.svg#icon-Instagram"></use>
-        </svg>
-        <p class="footer-socials-item-text">Instagram</p>
-      </li>
-      <li class="footer-socials-item">
-        <svg width="24" height="24" class="footer-socials-item-icon">
-          <use href="/img/icons.svg#icon-LinkedIn"></use>
-        </svg>
-        <p class="footer-socials-item-text">LinkedIn</p>
-      </li>
-      <li class="footer-socials-item">
-        <svg width="24" height="24" class="footer-socials-item-icon">
-          <use href="/img/icons.svg#icon-Youtube"></use>
-        </svg>
-        <p class="footer-socials-item-text">YouTube</p>
-      </li>
-    </ul>
+    <div class="second-block">
+      <h3 class="footer-nav-header">Quick Links</h3>
+      <ul class="footer-nav">
+        <li class="footer-nav-item">
+          <a href="#yoga-classes"></a>Yoga Classes
+        </li>
+        <li class="footer-nav-item"><a href="#team"></a>Team</li>
+        <li class="footer-nav-item"><a href="#pricing"></a>Pricing</li>
+        <li class="footer-nav-item"><a href="#contacts"></a>Contacts</li>
+      </ul>
+    </div>
+    <div class="third-block">
+      <h3 class="footer-socials-header">Connect With Us</h3>
+      <ul class="footer-socials">
+        <li class="footer-socials-item">
+          <a
+            target="_blank"
+            href="https://www.facebook.com/"
+            class="footer-socials-item-link"
+          >
+            <div class="footer-socials-icon-with-text">
+              <svg width="24" height="24" class="footer-socials-item-icon">
+                <use href="/img/icons.svg#icon-Facebook"></use>
+              </svg>
+              <p class="footer-socials-item-text">Facebook</p>
+            </div>
+          </a>
+        </li>
+        <li class="footer-socials-item">
+          <a
+            target="_blank"
+            href="https://www.instagram.com/"
+            class="footer-socials-item-link"
+          >
+            <div class="footer-socials-icon-with-text">
+              <svg width="24" height="24" class="footer-socials-item-icon">
+                <use href="/img/icons.svg#icon-Instagram"></use>
+              </svg>
+              <p class="footer-socials-item-text">Instagram</p>
+            </div>
+          </a>
+        </li>
+        <li class="footer-socials-item">
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/"
+            class="footer-socials-item-link"
+          >
+            <div class="footer-socials-icon-with-text">
+              <svg width="24" height="24" class="footer-socials-item-icon">
+                <use href="/img/icons.svg#icon-LinkedIn"></use>
+              </svg>
+              <p class="footer-socials-item-text">LinkedIn</p>
+            </div>
+          </a>
+        </li>
+        <li class="footer-socials-item">
+          <a
+            target="_blank"
+            href="https://www.youtube.com/"
+            class="footer-socials-item-link"
+          >
+            <div class="footer-socials-icon-with-text">
+              <svg width="24" height="24" class="footer-socials-item-icon">
+                <use href="/img/icons.svg#icon-Youtube"></use>
+              </svg>
+              <p class="footer-socials-item-text">YouTube</p>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </div>
     <p class="footer-copyright">© 2025 Yoga Studio. All rights reserved.</p>
   </div>
 </footer>
