--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,12 +1,10 @@
 :root {
-  /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Sarabun', Roboto, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   font-weight: 400;
 
-  color: #242424;
+  color: #0d0b0a;
   background-color: rgba(255, 255, 255, 0.87);
 
   font-synthesis: none;
