--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,7 +10,7 @@
         Subscribe to our newsletter for the latest updates on our yoga courses
         and events.
       </p>
-      <form action="" class="footer-subscribe-form">
+      <form action="" class="footer-subscribe-form" novalidate>
         <input
           class="footer-subscribe-form-input"
           type="email"
@@ -20,8 +20,8 @@
           pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
           required
         />
-        <!-- <p class="text-valid">Succes!</p>
-          <p class="text-invalid">Invalid email, try again</p> -->
+        <p class="text-valid">Success!</p>
+        <p class="text-invalid">Invalid email, try again</p>
         <button type="submit" class="footer-subscribe-form-btn">Join</button>
       </form>
       <p class="footer-privacy">
