add some changes

--- a/src/partials/pricing.html
+++ b/src/partials/pricing.html
@@ -1,4 +1,4 @@
-<section class="pricing-plan">
+<section class="pricing-plan" id="pricing">
   <div class="container">
     <p class="pricing-plan-subtitle">Affordable</p>
     <h2 class="pricing-plan-title">Pricing Plans</h2>
@@ -6,14 +6,14 @@
       Choose the perfect plan for your yoga journey.
     </p>
     <div class="pricing-tariff-plans">
-      <div class="pricing-card">
+      <div class="pricing-card one">
         <h3 class="pricing-card-title">One Session</h3>
         <p class="pricing-card-price">$10</p>
 
         <ul class="pricing-card-list">
           <li class="pricing-card-item">
             <svg class="pricing-card-icon" width="24" height="24">
-              <use href=""></use>
+              <use href="icon-check"></use>
             </svg>
             <span class="pricing-card-content">1 group session</span>
           </li>
@@ -35,7 +35,7 @@
         <button class="button-join" type="button">Join</button>
       </div>
 
-      <div class="pricing-card">
+      <div class="pricing-card two">
         <h3 class="pricing-card-title">8 Sessions Package</h3>
         <p class="pricing-card-price">$65</p>
 
@@ -61,8 +61,7 @@
         </ul>
         <button class="button-join" type="button">Join</button>
       </div>
-
-      <div class="pricing-card">
+      <div class="pricing-card three">
         <h3 class="pricing-card-title">12 Sessions Package</h3>
         <p class="pricing-card-price">$80</p>
 
