--- a/src/css/pricing.css
+++ b/src/css/pricing.css
@@ -5,12 +5,26 @@
 }
 
 .pricing-plan {
-  padding: 112px 0;
-  background-color: #f2fafa;
+  width: 100%;
+  padding: 64px 0;
+  background-color: #f8fbfe;
+}
+
+@media screen and (min-width: 768px) {
+  .pricing-plan {
+    padding: 40px 0;
+    background-color: #f2fafa;
+  }
+}
+
+@media screen and (min-width: 1336px) {
+  .pricing-plan {
+    padding: 112px 0;
+  }
 }
 
 .pricing-plan-subtitle {
-  margin-bottom: 16px;
+  margin-bottom: 12px;
   font-family: 'Sarabun', sans-serif;
   font-weight: 600;
   font-size: 16px;
@@ -19,30 +33,81 @@
   color: #0d0b0a;
 }
 
+@media screen and (min-width: 768px) {
+  .pricing-plan-subtitle {
+    margin-bottom: 16px;
+  }
+}
+
+@media screen and (min-width: 1336px) {
+  .pricing-plan-subtitle {
+  }
+}
+
 .pricing-plan-title {
-  margin-bottom: 24px;
+  margin-bottom: 20px;
   font-family: 'Cabin', sans-serif;
   font-weight: 400;
-  font-size: 52px;
+  font-size: 40px;
   line-height: 1.2;
   letter-spacing: 0.01em;
   text-align: center;
   color: #0d0b0a;
 }
 
+@media screen and (min-width: 768px) {
+  .pricing-plan-title {
+    margin-bottom: 24px;
+  }
+}
+
+@media screen and (min-width: 1336px) {
+  .pricing-plan-title {
+    font-size: 52px;
+  }
+}
+
 .pricing-plan-description {
-  margin-bottom: 40px;
+  margin-bottom: 48px;
   font-family: 'Sarabun', sans-serif;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.6;
   text-align: center;
   color: #0d0b0a;
 }
 
+@media screen and (min-width: 768px) {
+  .pricing-plan-description {
+    margin-bottom: 24px;
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 1336px) {
+  .pricing-plan-description {
+    margin-bottom: 40px;
+  }
+}
+
 .pricing-tariff-plans {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  gap: 32px;
+}
+
+@media screen and (min-width: 768px) {
+  .pricing-tariff-plans {
+    flex-direction: row;
+    flex-wrap: calc(());
+    gap: 24px;
+  }
+}
+
+@media screen and (min-width: 1336px) {
+  .pricing-tariff-plans {
+    flex-direction: row;
+  }
 }
 
 .pricing-card {
@@ -50,35 +115,87 @@
   flex-direction: column;
   border: 0px solid rgba(13, 11, 10, 0.15);
   border-radius: 16px;
-  padding: 32px;
-  width: calc((100% - 48px) / 3);
+  padding: 32px 24px;
   background-color: #dfebeb;
+}
+
+@media screen and (min-width: 768px) {
+  .pricing-card {
+    display: flex;
+    flex-direction: column;
+    border: 0px solid rgba(13, 11, 10, 0.15);
+    border-radius: 16px;
+    padding: 16px;
+    width: calc((100% - 48px) / 3);
+    background-color: #dfebeb;
+  }
+}
+
+@media screen and (min-width: 1336px) {
+  .pricing-card {
+    display: flex;
+    flex-direction: column;
+    border: 0px solid rgba(13, 11, 10, 0.15);
+    border-radius: 16px;
+    padding: 32px;
+    width: calc((100% - 48px) / 3);
+    background-color: #dfebeb;
+  }
 }
 
 .pricing-card-title {
   margin-bottom: 8px;
   font-family: 'Cabin', sans-serif;
   font-weight: 400;
-  font-size: 22px;
+  font-size: 18px;
   line-height: 1.4;
   letter-spacing: 0.01em;
   text-align: center;
   color: #0d0b0a;
 }
 
+@media screen and (min-width: 768px) {
+  .pricing-card-title {
+    font-size: 22px;
+  }
+}
+
+@media screen and (min-width: 1336px) {
+  .pricing-card-title {
+  }
+}
+
 .pricing-card-price {
-  margin-bottom: 32px;
+  margin-bottom: 24px;
   font-family: 'Cabin', sans-serif;
   font-weight: 400;
-  font-size: 72px;
+  font-size: 44px;
   line-height: 1.2;
   letter-spacing: 0.01em;
   text-align: center;
   color: #0d0b0a;
 }
 
+@media screen and (min-width: 768px) {
+  .pricing-card-price {
+    margin-bottom: 32px;
+    font-size: 72px;
+  }
+}
+
+@media screen and (min-width: 1336px) {
+  .pricing-card-price {
+  }
+}
+
 .pricing-card-list {
   margin-bottom: 32px;
+}
+
+@media screen and (min-width: 768px) {
+}
+
+@media screen and (min-width: 1336px) {
 }
 
 .pricing-card-item {
@@ -89,15 +206,39 @@
   color: #0d0b0a;
 }
 
+@media screen and (min-width: 768px) {
+}
+
+@media screen and (min-width: 1336px) {
+}
+
 .pricing-card-item:not(:last-child) {
   margin-bottom: 16px;
+}
+
+@media screen and (min-width: 768px) {
+}
+
+@media screen and (min-width: 1336px) {
 }
 
 .pricing-card-icon {
 }
 
+@media screen and (min-width: 768px) {
+}
+
+@media screen and (min-width: 1336px) {
+}
+
 .pricing-card-content {
   margin-left: 16px;
+}
+
+@media screen and (min-width: 768px) {
+}
+
+@media screen and (min-width: 1336px) {
 }
 
 .button-join {
@@ -106,7 +247,6 @@
   margin-top: auto;
   border: 1px solid #c2d9fc;
   border-radius: 100px;
-
   background-color: #c2d9fc;
   font-family: 'Sarabun', sans-serif;
   font-weight: 500;
