final version pricing

--- a/src/partials/pricing.html
+++ b/src/partials/pricing.html
@@ -6,98 +6,153 @@
       Choose the perfect plan for your yoga journey.
     </p>
     <div class="pricing-tariff-plans">
-      <div class="pricing-card one">
+      <div class="pricing-card">
         <h3 class="pricing-card-title">One Session</h3>
         <p class="pricing-card-price">$10</p>
 
         <ul class="pricing-card-list">
           <li class="pricing-card-item">
-            <svg class="pricing-card-icon" width="24" height="24">
-              <use href="icon-check"></use>
+            <svg
+              class="pricing-card-icon"
+              width="24"
+              height="24"
+              fill="#0d0b0a"
+            >
+              <use href="/img/icons.svg#icon-check"></use>
             </svg>
             <span class="pricing-card-content">1 group session</span>
           </li>
           <li class="pricing-card-item">
-            <svg class="pricing-card-icon" width="24" height="24">
-              <use href=""></use>
+            <svg
+              class="pricing-card-icon"
+              width="24"
+              height="24"
+              fill="#0d0b0a"
+            >
+              <use href="/img/icons.svg#icon-check"></use>
             </svg>
             <span class="pricing-card-content"
               >10% discount for next 2 Sessions</span
             >
           </li>
           <li class="pricing-card-item">
-            <svg class="pricing-card-icon" width="24" height="24">
-              <use href=""></use>
+            <svg
+              class="pricing-card-icon"
+              width="24"
+              height="24"
+              fill="#0d0b0a"
+            >
+              <use href="/img/icons.svg#icon-check"></use>
             </svg>
             <span class="pricing-card-content">Community support group</span>
           </li>
         </ul>
-        <button class="button-join" type="button">Join</button>
+        <button class="button-join" type="button" data-menu-open>Join</button>
       </div>
 
-      <div class="pricing-card two">
+      <div class="pricing-card">
         <h3 class="pricing-card-title">8 Sessions Package</h3>
         <p class="pricing-card-price">$65</p>
 
         <ul class="pricing-card-list">
           <li class="pricing-card-item">
-            <svg class="pricing-card-icon" width="24" height="24">
-              <use href=""></use>
+            <svg
+              class="pricing-card-icon"
+              width="24"
+              height="24"
+              fill="#0d0b0a"
+            >
+              <use href="/img/icons.svg#icon-check"></use>
             </svg>
             <span class="pricing-card-content">6 Group Sessions</span>
           </li>
           <li class="pricing-card-item">
-            <svg class="pricing-card-icon" width="24" height="24">
-              <use href=""></use>
+            <svg
+              class="pricing-card-icon"
+              width="24"
+              height="24"
+              fill="#0d0b0a"
+            >
+              <use href="/img/icons.svg#icon-check"></use>
             </svg>
             <span class="pricing-card-content">2 Individual Sessions</span>
           </li>
           <li class="pricing-card-item">
-            <svg class="pricing-card-icon" width="24" height="24">
-              <use href=""></use>
+            <svg
+              class="pricing-card-icon"
+              width="24"
+              height="24"
+              fill="#0d0b0a"
+            >
+              <use href="/img/icons.svg#icon-check"></use>
             </svg>
             <span class="pricing-card-content">Community support group</span>
           </li>
         </ul>
-        <button class="button-join" type="button">Join</button>
+        <button class="button-join" type="button" data-menu-open>Join</button>
       </div>
-      <div class="pricing-card three">
+      <div class="pricing-card">
         <h3 class="pricing-card-title">12 Sessions Package</h3>
         <p class="pricing-card-price">$80</p>
 
         <ul class="pricing-card-list">
           <li class="pricing-card-item">
-            <svg class="pricing-card-icon" width="24" height="24">
-              <use href=""></use>
+            <svg
+              class="pricing-card-icon"
+              width="24"
+              height="24"
+              fill="#0d0b0a"
+            >
+              <use href="/img/icons.svg#icon-check"></use>
             </svg>
             <span class="pricing-card-content">8 Group Sessions</span>
           </li>
           <li class="pricing-card-item">
-            <svg class="pricing-card-icon" width="24" height="24">
-              <use href=""></use>
+            <svg
+              class="pricing-card-icon"
+              width="24"
+              height="24"
+              fill="#0d0b0a"
+            >
+              <use href="/img/icons.svg#icon-check"></use>
             </svg>
             <span class="pricing-card-content">4 Individual Sessions</span>
           </li>
           <li class="pricing-card-item">
-            <svg class="pricing-card-icon" width="24" height="24">
-              <use href=""></use>
+            <svg
+              class="pricing-card-icon"
+              width="24"
+              height="24"
+              fill="#0d0b0a"
+            >
+              <use href="/img/icons.svg#icon-check"></use>
             </svg>
             <span class="pricing-card-content">Monthly yoga challenges</span>
           </li>
           <li class="pricing-card-item">
-            <svg class="pricing-card-icon" width="24" height="24">
-              <use href=""></use>
+            <svg
+              class="pricing-card-icon"
+              width="24"
+              height="24"
+              fill="#0d0b0a"
+            >
+              <use href="/img/icons.svg#icon-check"></use>
             </svg>
             <span class="pricing-card-content">Exclusive member discounts</span>
           </li>
           <li class="pricing-card-item">
-            <svg class="pricing-card-icon" width="24" height="24">
-              <use href=""></use>
+            <svg
+              class="pricing-card-icon"
+              width="24"
+              height="24"
+              fill="#0d0b0a"
+            >
+              <use href="/img/icons.svg#icon-check"></use>
             </svg>
             <span class="pricing-card-content">Community support group</span>
           </li>
         </ul>
-        <button class="button-join" type="button">Join</button>
+        <button class="button-join" type="button" data-menu-open>Join</button>
       </div>
     </div>
   </div>
