--- a/src/css/pricing.css
+++ b/src/css/pricing.css
@@ -1,26 +1,7 @@
-*,
-::after,
-::before {
-  box-sizing: border-box;
-}
-
 .pricing-plan {
   width: 100%;
   padding: 64px 0;
   background-color: #f8fbfe;
-}
-
-@media screen and (min-width: 768px) {
-  .pricing-plan {
-    padding: 40px 0;
-    background-color: #f2fafa;
-  }
-}
-
-@media screen and (min-width: 1336px) {
-  .pricing-plan {
-    padding: 112px 0;
-  }
 }
 
 .pricing-plan-subtitle {
@@ -30,18 +11,6 @@
   font-size: 16px;
   line-height: 1.5;
   text-align: center;
-  color: #0d0b0a;
-}
-
-@media screen and (min-width: 768px) {
-  .pricing-plan-subtitle {
-    margin-bottom: 16px;
-  }
-}
-
-@media screen and (min-width: 1336px) {
-  .pricing-plan-subtitle {
-  }
 }
 
 .pricing-plan-title {
@@ -52,19 +21,6 @@
   line-height: 1.2;
   letter-spacing: 0.01em;
   text-align: center;
-  color: #0d0b0a;
-}
-
-@media screen and (min-width: 768px) {
-  .pricing-plan-title {
-    margin-bottom: 24px;
-  }
-}
-
-@media screen and (min-width: 1336px) {
-  .pricing-plan-title {
-    font-size: 52px;
-  }
 }
 
 .pricing-plan-description {
@@ -74,40 +30,12 @@
   font-size: 16px;
   line-height: 1.6;
   text-align: center;
-  color: #0d0b0a;
-}
-
-@media screen and (min-width: 768px) {
-  .pricing-plan-description {
-    margin-bottom: 24px;
-    font-size: 18px;
-  }
-}
-
-@media screen and (min-width: 1336px) {
-  .pricing-plan-description {
-    margin-bottom: 40px;
-  }
 }
 
 .pricing-tariff-plans {
   display: flex;
   flex-direction: column;
   gap: 32px;
-}
-
-@media screen and (min-width: 768px) {
-  .pricing-tariff-plans {
-    flex-direction: row;
-    flex-wrap: calc(());
-    gap: 24px;
-  }
-}
-
-@media screen and (min-width: 1336px) {
-  .pricing-tariff-plans {
-    flex-direction: row;
-  }
 }
 
 .pricing-card {
@@ -119,30 +47,6 @@
   background-color: #dfebeb;
 }
 
-@media screen and (min-width: 768px) {
-  .pricing-card {
-    display: flex;
-    flex-direction: column;
-    border: 0px solid rgba(13, 11, 10, 0.15);
-    border-radius: 16px;
-    padding: 16px;
-    width: calc((100% - 48px) / 3);
-    background-color: #dfebeb;
-  }
-}
-
-@media screen and (min-width: 1336px) {
-  .pricing-card {
-    display: flex;
-    flex-direction: column;
-    border: 0px solid rgba(13, 11, 10, 0.15);
-    border-radius: 16px;
-    padding: 32px;
-    width: calc((100% - 48px) / 3);
-    background-color: #dfebeb;
-  }
-}
-
 .pricing-card-title {
   margin-bottom: 8px;
   font-family: 'Cabin', sans-serif;
@@ -151,18 +55,6 @@
   line-height: 1.4;
   letter-spacing: 0.01em;
   text-align: center;
-  color: #0d0b0a;
-}
-
-@media screen and (min-width: 768px) {
-  .pricing-card-title {
-    font-size: 22px;
-  }
-}
-
-@media screen and (min-width: 1336px) {
-  .pricing-card-title {
-  }
 }
 
 .pricing-card-price {
@@ -173,72 +65,27 @@
   line-height: 1.2;
   letter-spacing: 0.01em;
   text-align: center;
-  color: #0d0b0a;
-}
-
-@media screen and (min-width: 768px) {
-  .pricing-card-price {
-    margin-bottom: 32px;
-    font-size: 72px;
-  }
-}
-
-@media screen and (min-width: 1336px) {
-  .pricing-card-price {
-  }
 }
 
 .pricing-card-list {
   margin-bottom: 32px;
 }
 
-@media screen and (min-width: 768px) {
-}
-
-@media screen and (min-width: 1336px) {
-}
-
 .pricing-card-item {
+  display: flex;
+  align-items: center;
   font-family: 'Sarabun', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.6;
-  color: #0d0b0a;
-}
-
-@media screen and (min-width: 768px) {
-}
-
-@media screen and (min-width: 1336px) {
 }
 
 .pricing-card-item:not(:last-child) {
   margin-bottom: 16px;
 }
 
-@media screen and (min-width: 768px) {
-}
-
-@media screen and (min-width: 1336px) {
-}
-
-.pricing-card-icon {
-}
-
-@media screen and (min-width: 768px) {
-}
-
-@media screen and (min-width: 1336px) {
-}
-
 .pricing-card-content {
   margin-left: 16px;
-}
-
-@media screen and (min-width: 768px) {
-}
-
-@media screen and (min-width: 1336px) {
 }
 
 .button-join {
@@ -252,11 +99,106 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
-  color: #0d0b0a;
 }
 
+.button-join:focus {
+  opacity: 0.5;
+}
+
+/*МЕДІАЗАПИТИ*/
+
 @media screen and (min-width: 768px) {
+  .pricing-plan {
+    padding: 40px 0;
+    background-color: #f2fafa;
+  }
+
+  .pricing-plan-subtitle {
+    margin-bottom: 16px;
+  }
+
+  .pricing-plan-title {
+    margin-bottom: 24px;
+  }
+
+  .pricing-plan-description {
+    margin-bottom: 24px;
+    font-size: 18px;
+  }
+
+  .pricing-tariff-plans {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 24px;
+    justify-content: space-between;
+  }
+
+  .pricing-card-title {
+    font-size: 22px;
+  }
+
+  .pricing-card-price {
+    margin-bottom: 32px;
+    font-size: 72px;
+  }
+
+  .button-join:hover {
+    opacity: 0.5;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1335.98px) {
+  .pricing-card {
+    padding: 16px;
+    width: calc((100% - 48px) / 2);
+  }
+
+  .pricing-card:last-child {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto;
+    gap: 0 32px;
+    padding: 86px 16px;
+  }
+
+  .pricing-card:last-child .pricing-card-title {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .pricing-card:last-child .pricing-card-price {
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  .pricing-card:last-child .pricing-card-list {
+    grid-column: 2;
+    grid-row: 1 / 4;
+    margin-bottom: 0;
+  }
+
+  .pricing-card:last-child .button-join {
+    grid-column: 1;
+    grid-row: 3;
+  }
 }
 
 @media screen and (min-width: 1336px) {
+  .pricing-plan {
+    padding: 112px 0;
+  }
+
+  .pricing-plan-title {
+    font-size: 52px;
+  }
+
+  .pricing-plan-description {
+    margin-bottom: 40px;
+  }
+
+  .pricing-card {
+    padding: 32px;
+    width: calc((100% - 48px) / 3);
+  }
 }
