--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -1,7 +1,6 @@
-<body>
-  <main>
-    <section class="team" id="team">
-      <div class="container">
+
+    <section class=" team container" id="team">
+      <div class="">
         <h3 class="team-text-top">Meet</h3>
         <h2 class="team-title">Our Team</h2>
         <h4 class="team-text">
@@ -369,5 +368,4 @@
         </ul>
       </div>
     </section>
-  </main>
-</body>
+
