Image display fix

--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -11,26 +11,26 @@
           <source
             media="(min-width: 1440px)"
             srcset="
-              /src/images/team/desk/liamjohnson-desk1x.jpg 1x,
-              /src/images/team/desk/liamjohnson-desk2x.jpg 2x
+              /img/team/desk/liamjohnson-desk1x.jpg 1x,
+              /img/team/desk/liamjohnson-desk2x.jpg 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              /src/images/team/tab/liamjohnson-tab1x.jpg 1x,
-              /src/images/team/tab/liamjohnson-tab2x.jpg 2x
+              /img/team/tab/liamjohnson-tab1x.jpg 1x,
+              /img/team/tab/liamjohnson-tab2x.jpg 2x
             "
           />
           <source
             media="(max-width: 375px)"
             srcset="
-              /src/images/team/mob/liamjohnson1x.jpg 1x,
-              /src/images/team/mob/liamjohnson2x.jpg 2x
+              /img/team/mob/liamjohnson1x.jpg 1x,
+              /img/team/mob/liamjohnson2x.jpg 2x
             "
           />
           <img
-            src="/images/team/desk/liamjohnson-desk1x.jpg"
+            src="/img/team/desk/liamjohnson-desk1x.jpg"
             alt="Liam Johnson"
             class="team-image"
           />
@@ -51,7 +51,7 @@
                 href="https://www.linkedin.com/school/goit-start-your-career-in-it/"
               >
                 <svg class="icon-soc" width="24" height="24">
-                  <use href="/src/images/icons.svg#icon-linkedIn"></use>
+                  <use href="/img/icons.svg#icon-linkedIn"></use>
                 </svg>
               </a>
             </li>
@@ -62,7 +62,7 @@
                 href="https://www.instagram.com/goitclub/"
               >
                 <svg class="icon-soc" width="24" height="24">
-                  <use href="/src/images/icons.svg#icon-instagram"></use>
+                  <use href="/img/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -75,26 +75,26 @@
           <source
             media="(min-width: 1440px)"
             srcset="
-              /src/images/team/desk/emmastone-desk1x.jpg 1x,
-              /src/images/team/desk/emmastone-desk2x.jpg 2x
+              /img/team/desk/emmastone-desk1x.jpg 1x,
+              /img/team/desk/emmastone-desk2x.jpg 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              /src/images/team/tab/emmastone-tab1x.jpg 1x,
-              /src/images/team/tab/emmastone-tab2x.jpg 2x
+              /img/team/tab/emmastone-tab1x.jpg 1x,
+              /img/team/tab/emmastone-tab2x.jpg 2x
             "
           />
           <source
             media="(max-width: 375px)"
             srcset="
-              /src/images/team/mob/emmastone1x.jpg 1x,
-              /src/images/team/mob/emmastone2x.jpg 2x
+              /img/team/mob/emmastone1x.jpg 1x,
+              /img/team/mob/emmastone2x.jpg 2x
             "
           />
           <img
-            src="/src/images/team/desk/emmastone-desk1x.jpg"
+            src="/img/team/desk/emmastone-desk1x.jpg"
             alt="Emma Stone"
             class="team-image"
           />
@@ -116,7 +116,7 @@
                 href="https://www.linkedin.com/school/goit-start-your-career-in-it/"
               >
                 <svg class="icon-soc" width="24" height="24">
-                  <use href="/src/images/icons.svg#icon-linkedIn"></use>
+                  <use href="/img/icons.svg#icon-linkedIn"></use>
                 </svg>
               </a>
             </li>
@@ -128,26 +128,26 @@
           <source
             media="(min-width: 1440px)"
             srcset="
-              /src/images/team/desk/sophialee-desk1x.jpg 1x,
-              /src/images/team/desk/sophialee-desk2x.jpg 2x
+              /img/team/desk/sophialee-desk1x.jpg 1x,
+              /img/team/desk/sophialee-desk2x.jpg 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              /src/images/team/tab/sophialee-tab1x.jpg 1x,
-              /src/images/team/tab/sophialee-tab2x.jpg 2x
+              /img/team/tab/sophialee-tab1x.jpg 1x,
+              /img/team/tab/sophialee-tab2x.jpg 2x
             "
           />
           <source
             media="(max-width: 375px)"
             srcset="
-              /src/images/team/mob/sophialee1x.jpg 1x,
-              /src/images/team/mob/sophialee2x.jpg 2x
+              /img/team/mob/sophialee1x.jpg 1x,
+              /img/team/mob/sophialee2x.jpg 2x
             "
           />
           <img
-            src="/src/images/team/desk/sophialee-desk1x.jpg"
+            src="/img/team/desk/sophialee-desk1x.jpg"
             alt="Sophia Lee"
             class="team-image"
           />
@@ -168,7 +168,7 @@
                 href="https://www.instagram.com/goitclub/"
               >
                 <svg class="icon-soc" width="24" height="24">
-                  <use href="/src/images/icons.svg#icon-instagram"></use>
+                  <use href="/img/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -180,26 +180,26 @@
           <source
             media="(min-width: 1440px)"
             srcset="
-              /src/images/team/desk/noahbrown-desk1x.jpg 1x,
-              /src/images/team/desk/noahbrown-desk2x.jpg 2x
+              /img/team/desk/noahbrown-desk1x.jpg 1x,
+              /img/team/desk/noahbrown-desk2x.jpg 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              /src/images/team/tab/noahbrown-tab1x.jpg 1x,
-              /src/images/team/tab/noahbrown-tab2x.jpg 2x
+              /img/team/tab/noahbrown-tab1x.jpg 1x,
+              /img/team/tab/noahbrown-tab2x.jpg 2x
             "
           />
           <source
             media="(max-width: 375px)"
             srcset="
-              /src/images/team/mob/noahbrown1x.jpg 1x,
-              /src/images/team/mob/noahbrown2x.jpg 2x
+              /img/team/mob/noahbrown1x.jpg 1x,
+              /img/team/mob/noahbrown2x.jpg 2x
             "
           />
           <img
-            src="/src/images/team/desk/noahbrown-desk1x.jpg"
+            src="/img/team/desk/noahbrown-desk1x.jpg"
             alt="Noah Brown"
             class="team-image"
           />
@@ -221,7 +221,7 @@
                 href="https://www.linkedin.com/school/goit-start-your-career-in-it/"
               >
                 <svg class="icon-soc" width="24" height="24">
-                  <use href="/images/icons.svg#icon-linkedIn"></use>
+                  <use href="/img/icons.svg#icon-linkedIn"></use>
                 </svg>
               </a>
             </li>
@@ -233,26 +233,26 @@
           <source
             media="(min-width: 1440px)"
             srcset="
-              /src/images/team/desk/avagreen-desk1x.jpg 1x,
-              /src/images/team/desk/avagreen-desk2x.jpg 2x
+              /img/team/desk/avagreen-desk1x.jpg 1x,
+              /img/team/desk/avagreen-desk2x.jpg 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              /src/images/team/tab/avagreen-tab1x.jpg 1x,
-              /src/images/team/tab/avagreen-tab2x.jpg 2x
+              /img/team/tab/avagreen-tab1x.jpg 1x,
+              /img/team/tab/avagreen-tab2x.jpg 2x
             "
           />
           <source
             media="(max-width: 375px)"
             srcset="
-              /src/images/team/mob/avagreen1x.jpg 1x,
-              /src/images/team/mob/avagreen2x.jpg 2x
+              /img/team/mob/avagreen1x.jpg 1x,
+              /img/team/mob/avagreen2x.jpg 2x
             "
           />
           <img
-            src="/src/images/team/desk/avagreen-desk1x.jpg"
+            src="/img/team/desk/avagreen-desk1x.jpg"
             alt="Ava Green"
             class="team-image"
           />
@@ -274,7 +274,7 @@
                 href="https://www.facebook.com/goITclub/"
               >
                 <svg class="icon-soc" width="24" height="24">
-                  <use href="/src/images/icons.svg#icon-facebook"></use>
+                  <use href="/img/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -284,7 +284,7 @@
                 href="https://www.instagram.com/goitclub/"
               >
                 <svg class="icon-soc" width="24" height="24">
-                  <use href="/src/images/icons.svg#icon-instagram"></use>
+                  <use href="/img/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -294,7 +294,7 @@
                 href="https://www.linkedin.com/school/goit-start-your-career-in-it/"
               >
                 <svg class="icon-soc" width="24" height="24">
-                  <use href="/src/images/icons.svg#icon-linkedIn"></use>
+                  <use href="/img/icons.svg#icon-linkedIn"></use>
                 </svg>
               </a>
             </li>
@@ -306,26 +306,26 @@
           <source
             media="(min-width: 1440px)"
             srcset="
-              /src/images/team/desk/clarkthomas-desk1x.jpg 1x,
-              /src/images/team/desk/clarkthomas-desk2x.jpg 2x
+              /img/team/desk/clarkthomas-desk1x.jpg 1x,
+              /img/team/desk/clarkthomas-desk2x.jpg 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              /src/images/team/tab/clarkthomas-tab1x.jpg 1x,
-              /src/images/team/tab/clarkthomas-tab2x.jpg 2x
+              /img/team/tab/clarkthomas-tab1x.jpg 1x,
+              /img/team/tab/clarkthomas-tab2x.jpg 2x
             "
           />
           <source
             media="(max-width: 375px)"
             srcset="
-              /src/images/team/mob/clarkthomas1x.jpg 1x,
-              /src/images/team/mob/clarkthomas2x.jpg 2x
+              /img/team/mob/clarkthomas1x.jpg 1x,
+              /img/team/mob/clarkthomas2x.jpg 2x
             "
           />
           <img
-            src="/src/images/team/desk/clarkthomas-desk1x.jpg"
+            src="/img/team/desk/clarkthomas-desk1x.jpg"
             alt="Clark Thomas"
             class="team-image"
           />
@@ -346,7 +346,7 @@
                 href="https://www.facebook.com/goITclub/"
               >
                 <svg class="icon-soc" width="24" height="24">
-                  <use href="/src/images/icons.svg#icon-facebook"></use>
+                  <use href="/img/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -356,7 +356,7 @@
                 href="https://www.instagram.com/goitclub/"
               >
                 <svg class="icon-soc" width="24" height="24">
-                  <use href="/src/images/icons.svg#icon-instagram"></use>
+                  <use href="/img/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
