--- a/src/partials/pricing.html
+++ b/src/partials/pricing.html
@@ -5,8 +5,8 @@
     <p class="pricing-plan-description">
       Choose the perfect plan for your yoga journey.
     </p>
-    <div class="pricing-tariff-plans">
-      <div class="pricing-card">
+    <ul class="pricing-tariff-plans">
+      <li class="pricing-card">
         <h3 class="pricing-card-title">One Session</h3>
         <p class="pricing-card-price">$10</p>
 
@@ -48,9 +48,9 @@
           </li>
         </ul>
         <button class="button-join" type="button" data-menu-open>Join</button>
-      </div>
+      </li>
 
-      <div class="pricing-card">
+      <li class="pricing-card">
         <h3 class="pricing-card-title">8 Sessions Package</h3>
         <p class="pricing-card-price">$65</p>
 
@@ -90,8 +90,8 @@
           </li>
         </ul>
         <button class="button-join" type="button" data-menu-open>Join</button>
-      </div>
-      <div class="pricing-card">
+      </li>
+      <li class="pricing-card">
         <h3 class="pricing-card-title">12 Sessions Package</h3>
         <p class="pricing-card-price">$80</p>
 
@@ -153,7 +153,7 @@
           </li>
         </ul>
         <button class="button-join" type="button" data-menu-open>Join</button>
-      </div>
-    </div>
+      </li>
+    </ul>
   </div>
 </section>
