update hero css and update anchor link

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="hero">
 
     <picture>
         <source media="(min-width:1336px)" srcset="../img/hero-img-desk-min.jpg 1x,
