yoga-classes.html

--- a/src/partials/yoga-classes.html
+++ b/src/partials/yoga-classes.html
@@ -56,7 +56,10 @@
         <picture>
           <source
             media="(min-width: 1336px)"
-            srcset="../img/yoga-classes/Yogaclas-desc1-min.jpg x, ../img/yoga-classes/Yogaclas-desc2@2x-min.jpg 2x"
+            srcset="
+              ../img/yoga-classes/Yogaclas-desc1-min.jpg    1x,
+              ../img/yoga-classes/Yogaclas-desc2@2x-min.jpg 2x
+            "
           />
           <source
             media="(min-width: 768px)"
